# ActionsTest

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: compile-and-run.yml  fuzzing.yml
cmake/dependencies/: CMakeLists.txt  GUI.cmake  catch.cmake  imgui.cmake  sfml.cmake
fuzzer/: CMakeLists.txt  FENFuzzer.cpp
src/: Action.h  main.cpp
src/chess/: BitBoard.cpp  BitBoard.h  Board.cpp  Board.h  FEN.cpp  Fen.cpp  Forward.h  Move.cpp  Move.h  MoveGen.cpp  MoveGen.h  Piece.cpp  Piece.h  SAN.cpp  Types.h
src/chess/players/: Game.cpp  Game.h  Player.h  Stockfish.cpp  Stockfish.h  StockfishPlayer.cpp  StockfishPlayer.h  TrivialPlayers.cpp  TrivialPlayers.h
src/util/: Assertions.cpp  Assertions.h  Process.cpp  Process.h  Process_Base.cpp  Process_Unix.cpp  Process_Windows.cpp  RandomUtil.cpp  RandomUtil.h  StringUtil.cpp  StringUtil.h
test/: ActionTest.cpp
test/chess/: Benchmarks.cpp  Board.cpp  Excursion.cpp  MoveGen.cpp  Moves.cpp  Piece.cpp  Repetition.cpp  SAN.cpp  TestUtil.cpp  TestUtil.h
test/standalone/: BatchFENTest.cpp  CMakeLists.txt  ProcTest.cpp  ProcTestProc.cpp
test/util/: StringUtil.cpp
visual/: CMakeLists.txt  main.cpp
visual/resources/: SIL Open Font License.txt
